@@ -1,11 +1,11 @@
 Name: @PACKAGE@
 Summary: EXIF tag library
 Version: @VERSION@
-Release: 2
+Release: 1
 Source: http://prdownloads.sourceforge.net/libexif/%{name}-%{version}.tar.gz
 Url: http://sourceforge.net/projects/libexif/
 Group: System Environment/Libraries
-License: GPL
+License: LGPL
 # replaced Packager: header, as most people making packages will be somebody
 # else. original spec file author is Mark Pulford <mark@kyne.com.au>
 BuildRoot: %{_tmppath}/%{name}-%{version}-root
@@ -41,9 +41,8 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root)
-%doc ChangeLog README
+%doc ChangeLog README NEWS AUTHORS COPYING
 %{_libdir}/libexif.so.*
-%{_libdir}/libexif.so
 %{_datadir}/locale/*/LC_MESSAGES/*.mo
 
 %files devel
@@ -52,4 +51,4 @@ rm -rf $RPM_BUILD_ROOT
 %{_includedir}/libexif
 %{_libdir}/libexif.la
 %{_libdir}/libexif.a
-
+%{_libdir}/libexif.so
